business related API changes
